--- a/src/index.css
+++ b/src/index.css
@@ -145,3 +145,20 @@ body {
   max-width: 250px;
   height: 250px;
 }
+.networks-social{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.network{
+  width: 40px;
+  text-align: center;
+}
+.network a{
+  width: 100%;
+  font-size: 1.3rem;
+  color: #6c757d;
+}
+.card{
+  border: none;
+}
