fin del proyecto

--- a/src/index.css
+++ b/src/index.css
@@ -178,3 +178,26 @@ body {
   width: 80%;
   height: 450px;
 }
+.accordion-w{
+  width: 100%;
+}
+.btn-acordion{
+  width: 100%;
+  padding: 10px 20px 6px;
+  font-size: 1.2rem;
+  font-family: 'Open Sans', Helevetica, Arial, sans-serif;
+  color: #999;
+  background-color: transparent;
+  border: 1px solid #d0d0d0;
+  margin-bottom: 17px;
+  margin-top: 17px;
+  cursor: pointer;
+  text-align: left;
+  outline: none;
+  transition: 0.4s;
+}
+.text-description-accordion{
+  padding: 5px 20px 30px;
+  color: #626364;
+  line-height: 1.8;
+}
